examples/test/testpolicy5297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5297
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key38: value26
      key21: value49
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value43
          key45: value34
      podSelector:
        matchLabels:
          key47: value16
